<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>epsrc_controller</name>
	<version>0.0.0</version>
	<description>The main car controller code for the EPSRC project. Contains EUFS/ROS interface code as well as basic path planning.</description>
	<maintainer email="josephagrane@gmail.com">Joseph Agrane</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<depend>eufs_msgs</depend>
	<depend>eufs_tracks</depend>
	<depend>std_msgs</depend>
	<depend>sim_data_collection</depend>
	<depend>ugrdv_msgs</depend>
	<depend>ackermann_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>rclpy</depend>
	<depend>python3-scipy</depend>
	<depend>python3-networkx</depend>
	<depend>ament_index_python</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>